[package]
name = "pektin-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
deadpool-redis = "0.10"
hex = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
trust-dns-proto = { version = "0.21", features = ["dnssec-ring", "serde-config"] }
url = "2.2.2"

[lib]
name = "pektin_common"
path = "src/lib.rs"